[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scn/Interface.gd" type="Script" id=1]
[ext_resource path="res://Scn/Expense.gd" type="Script" id=2]
[ext_resource path="res://Scn/Recipe.gd" type="Script" id=3]

[node name="Interface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Expense_Title" type="Label" parent="."]
margin_left = 32.0
margin_top = 32.0
margin_right = 248.0
margin_bottom = 46.0
text = "Total  depense:"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="expense_value" type="Label" parent="Expense_Title"]
margin_left = 160.0
margin_right = 216.0
margin_bottom = 14.0
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Balance_Title" type="Label" parent="."]
margin_left = 32.0
margin_top = 48.0
margin_right = 149.0
margin_bottom = 62.0
text = "Montant restants: "
__meta__ = {
"_edit_group_": true
}

[node name="Balance_value" type="Label" parent="Balance_Title"]
margin_left = 160.0
margin_right = 216.0
margin_bottom = 14.0
text = "0"
align = 2

[node name="Recipe_Title" type="Label" parent="."]
margin_left = 32.0
margin_top = 16.0
margin_right = 109.0
margin_bottom = 30.0
text = "mon argent:"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Recipe_value" type="Label" parent="Recipe_Title"]
margin_left = 160.0
margin_right = 216.0
margin_bottom = 14.0
text = "0"
align = 2

[node name="Expense_Name" type="LineEdit" parent="."]
margin_left = 320.0
margin_top = 48.0
margin_right = 456.0
margin_bottom = 74.0
text = "DÃ©pense"
clear_button_enabled = true
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Expense_Amount" type="SpinBox" parent="Expense_Name"]
margin_left = 144.0
margin_right = 202.0
margin_bottom = 24.0
max_value = 1000.0

[node name="Expense_Button_Add" type="Button" parent="Expense_Name"]
margin_left = 224.0
margin_right = 248.0
margin_bottom = 24.0
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Expense_Button_Remove" type="Button" parent="Expense_Name"]
margin_left = 256.0
margin_right = 280.0
margin_bottom = 24.0
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Recipe_Name" type="LineEdit" parent="."]
margin_left = 320.0
margin_top = 16.0
margin_right = 456.0
margin_bottom = 42.0
text = "Monnaie"
clear_button_enabled = true
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Recipe_Amount" type="SpinBox" parent="Recipe_Name"]
margin_left = 144.0
margin_right = 202.0
margin_bottom = 24.0
max_value = 1000.0

[node name="Recipe_Button_Add" type="Button" parent="Recipe_Name"]
margin_left = 224.0
margin_right = 248.0
margin_bottom = 24.0
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Recipe_Button_Remove" type="Button" parent="Recipe_Name"]
margin_left = 256.0
margin_right = 280.0
margin_bottom = 24.0
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Expense_Name/Expense_Button_Add" to="Expense_Name" method="_on_Depense_Button_pressed"]
[connection signal="pressed" from="Expense_Name/Expense_Button_Remove" to="Expense_Name" method="_on_Depense_Button_Remove_pressed"]
[connection signal="pressed" from="Recipe_Name/Recipe_Button_Add" to="Recipe_Name" method="_on_Depense_Button_pressed"]
[connection signal="pressed" from="Recipe_Name/Recipe_Button_Remove" to="Recipe_Name" method="_on_Money_Button_Remove_pressed"]
